--- a/Inkscape/Inkscapes nybörjarguide/align-and-distribute.po
+++ b/Inkscape/Inkscapes nybörjarguide/align-and-distribute.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 17:53+0200\n"
+"PO-Revision-Date: 2025-07-29 13:13+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -23,14 +23,14 @@ msgstr ""
 
 #: ../../source/align-and-distribute.rst:3 af6cbd25b05c48029c138eb99512bfd7
 msgid "Align and Distribute"
-msgstr "Rikta och fördela"
+msgstr "Justera och distribuera"
 
 #: ../../source/align-and-distribute.rst:5 f76d1b745e2b4f8883987f99f74a471d
 msgid ""
 "|Large Icon for Align and Distribute dialog| :kbd:`Shift` + :kbd:`Ctrl` "
 "+ :kbd:`A`"
 msgstr ""
-"|Large Icon for Align and Distribute dialog| :kbd:`Shift` + :kbd:`Ctrl` "
+"|Large Icon for Align and Distribute dialog| :kbd:`Skift` + :kbd:`Ctrl` "
 "+ :kbd:`A`"
 
 #: ../../source/align-and-distribute.rst:54 5ff4baae839947a69ac00049c446c39c
@@ -49,7 +49,7 @@ msgstr ""
 
 #: ../../source/align-and-distribute.rst:11 e985d8c41fd9431a8037ab5398097126
 msgid "To use it for aligning nodes:"
-msgstr "För att använda den för att rikta in noder:"
+msgstr "För att använda den för att justera noder:"
 
 #: ../../source/align-and-distribute.rst:13 0059784a8b30465bb740d0b3e1cd1c31
 msgid ""
@@ -61,7 +61,7 @@ msgstr ""
 
 #: ../../source/align-and-distribute.rst:14 e5ad97f087ab4266a9b44727a0af2f23
 msgid "Switch to the Node tool."
-msgstr "Växla till Node-verktyget."
+msgstr "Växla till Nodverktyget."
 
 #: ../../source/align-and-distribute.rst:15 7d30a73afb9345ce9719c49130ff7d88
 msgid "Select a couple of nodes."
@@ -81,17 +81,15 @@ msgstr "För att justera objekt:"
 
 #: ../../source/align-and-distribute.rst:20 f01b21a355094cd4b873ffe43898aaaa
 msgid "Open the dialog."
-msgstr ""
-"Öppna inställningsdialogrutan för inputstream.ffmpegdirect för ändring av "
-"tidsförskjutning och andra inställningar."
+msgstr "Öppna dialogrutan."
 
 #: ../../source/align-and-distribute.rst:21 ea023e1a22a14aa9904ec4d56e47bfbd
 msgid "Switch to the Select tool."
-msgstr "Byt till verktyget Välj."
+msgstr "Byt till Väljare-verktyget."
 
 #: ../../source/align-and-distribute.rst:22 ede0be3bd02b49918b2871e6339d3ba1
 msgid "Select the objects that you want to align."
-msgstr "Välj de objekt som du vill rikta in."
+msgstr "Välj de objekt som du vill justera."
 
 #: ../../source/align-and-distribute.rst:23 718494b10c88456f915c3c3c51f5c889
 msgid ""
@@ -119,13 +117,13 @@ msgstr ""
 
 #: ../../source/align-and-distribute.rst:32 918885eae85345da89b314c0b8292025
 msgid "Disordered objects"
-msgstr "Oordnade föremål"
+msgstr "Oordnade objekt"
 
 #: ../../source/align-and-distribute.rst:36 1d28dab00a34492c8fed847a5ea1d838
 msgid ""
 "Before arranging the objects, they are distributed somewhat randomly on "
 "the canvas."
-msgstr "Innan objekten arrangeras fördelas de något slumpmässigt på duken."
+msgstr "Innan objekten ordnas fördelas de något slumpmässigt på duken."
 
 #: ../../source/align-and-distribute.rst:39 0f900cfe95314e14ab9418523de9b933
 msgid "Ordered objects"
@@ -136,17 +134,17 @@ msgid ""
 "After aligning each row and column vertically and horizontally, the "
 "result looks very neat."
 msgstr ""
-"Efter att ha riktat in varje rad och kolumn vertikalt och horisontellt "
-"ser resultatet mycket snyggt ut."
+"Efter att ha justerat varje rad och kolumn vertikalt och horisontellt ser "
+"resultatet mycket snyggt ut."
 
 #: ../../source/align-and-distribute.rst:46 da02b7d166be47dfabfd6939efb1c26b
 msgid "The Align and Distribute dialog in object mode"
-msgstr "Dialogrutan Align and Distribute i objektläge"
+msgstr "Dialogrutan Justera och distribuera i objektläge"
 
 #: ../../source/align-and-distribute.rst:50 67ee881bad894bde9a3230d06138d7e2
 msgid ""
 "With the :guilabel:`Align and Distribute dialog`, it only takes a couple "
 "of clicks to arrange your objects neatly."
 msgstr ""
-"Med dialogen :guilabel:`Align and Distribute` krävs det bara ett par "
+"Med dialogen :guilabel:`Justera och distribuera` krävs det bara ett par "
 "klick för att ordna dina objekt snyggt och prydligt."
