--- a/Inkscape/Inkscapes nybörjarguide/export-pdf.po
+++ b/Inkscape/Inkscapes nybörjarguide/export-pdf.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:26+0200\n"
+"PO-Revision-Date: 2025-07-28 12:47+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -34,9 +34,9 @@ msgid ""
 msgstr ""
 "PDF-filformatet är ett vektorformat som även kan innehålla rasterbilder. "
 "Inkscape kan spara direkt till PDF. För att göra det, "
-"gör :menuselection:`File --> Save a Copy`, och välj :guilabel:`Portable "
-"Document Format (\\*.pdf)` från listan över tillgängliga filformat "
-"längst ner."
+"gör :menuselection:`Arkiv --> Spara en kopia`, och "
+"välj :guilabel:`Portable Document Format (\\*.pdf)` från listan över "
+"tillgängliga filformat längst ner."
 
 #: ../../source/export-pdf.rst:11 8602a0494a7547ffb387c32f357ae7aa
 msgid ""
@@ -59,7 +59,7 @@ msgid ""
 "no specific version is required by the persons who will get the PDF file "
 "from you, you can leave it at the default 1.5."
 msgstr ""
-":guilabel:`Restrict to PDF version`: Nuvarande val är 1.4 eller 1.5. Om "
+":guilabel:`Begränsa till PDF-version`: Aktuella val är 1.4 eller 1.5. Om "
 "ingen specifik version krävs av de personer som kommer att få PDF-filen "
 "från dig, kan du låta den vara 1.5 som standard."
 
@@ -73,13 +73,13 @@ msgid ""
 "you can make use of the third option :guilabel:`Omit text in PDF and "
 "create LaTeX file`."
 msgstr ""
-":guilabel:`Optioner för textutmatning`: Om din text måste vara sökbar i "
-"PDF-filen och typsnittslicensen tillåter att du bäddar in "
-"typsnittet, välj :guilabel:`Embed fonts`. När texten mest är "
-"dekorativ (som i en logotyp) är det bättre att konvertera texten till "
-"slingor. Om du skriver på en avhandling eller ett annat vetenskapligt "
-"dokument och vet hur man arbetar med LaTeX, kan du använda det tredje "
-"alternativet :guilabel:`Omit text in PDF and create LaTeX file`."
+":guilabel:`Alternativ för textutmatning`: Om din text måste vara sökbar "
+"i PDF-filen och typsnittslicensen tillåter att du bäddar in typsnittet, "
+"välj :guilabel:`Bädda in typsnitt`. När texten mest är dekorativ (som i "
+"en logotyp) är det bättre att konvertera texten till slingor. Om du "
+"skriver på en avhandling eller ett annat vetenskapligt dokument och vet "
+"hur man arbetar med LaTeX, kan du använda det tredje "
+"alternativet :guilabel:`Utelämna text i PDF och skapa LaTeX-fil`."
 
 #: ../../source/export-pdf.rst:19 9cac1c144ce24c73b289ca5a5c18cdf6
 msgid ""
@@ -111,7 +111,7 @@ msgid ""
 ":guilabel:`Output page size`: Lets you choose which part of the drawing "
 "to export to PDF."
 msgstr ""
-":guilabel:`Sidstorlek vid utmatning`: Låter dig välja vilken del av "
+":guilabel:`Sidstorlek för utmatning`: Låter dig välja vilken del av "
 "ritningen som ska exporteras till PDF."
 
 #: ../../source/export-pdf.rst:22 459be581a8f54c96baa1125a730085d9
@@ -119,7 +119,7 @@ msgid ""
 ":guilabel:`Bleed/margin`: Increases the size of the exported area by "
 "adding a margin of the selected width."
 msgstr ""
-":guilabel:`Blädd/marginal`: Ökar storleken på det exporterade området "
+":guilabel:`Utfall/marginal`: Ökar storleken på det exporterade området "
 "genom att lägga till en marginal med den valda bredden."
 
 #: ../../source/export-pdf.rst:23 ea4d55cffc5b408d875972c7864ba878
