--- a/Inkscape/Inkscapes nybörjarguide/import-pictures.po
+++ b/Inkscape/Inkscapes nybörjarguide/import-pictures.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:28+0200\n"
+"PO-Revision-Date: 2025-07-29 13:08+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -56,8 +56,8 @@ msgid ""
 "To import an image, use :menuselection:`File --> Import`. In the dialog that "
 "opens, you can select the file."
 msgstr ""
-"För att importera en bild använder du :menuselection:`File --> Import`. I den "
-"dialogruta som öppnas kan du välja fil."
+"För att importera en bild använder du :menuselection:`Arkiv --> Importera`. I "
+"den dialogruta som öppnas kan du välja fil."
 
 #: ../../source/import-pictures.rst:20 ae284039f6ce456ca9ad3bde45020189
 msgid ""
@@ -76,7 +76,7 @@ msgid ""
 msgstr ""
 "Få inte panik om du har valt fel alternativ för inbäddning eller länkning, du "
 "kan ändra detta när som helst. Markera bilden, högerklicka på den och välj "
-"sedan antingen :guilabel:`Extract Image` eller :guilabel:`Embed Image` för "
+"sedan antingen :guilabel:`Extrahera bild` eller :guilabel:`Bädda in bild` för "
 "att ändra till det andra läget."
 
 #: ../../source/import-pictures.rst:28 753ec40f1079482f8bc26894df294eb4
@@ -100,11 +100,11 @@ msgstr ""
 
 #: ../../source/import-pictures.rst:36 2501dec5a1534219b936b66a07d750ca
 msgid "Bitmap Image Import Dialog featuring the import options"
-msgstr "Dialog för import av bitmapbilder med importalternativ"
+msgstr "Dialog för import av rasterbilder med importalternativ"
 
 #: ../../source/import-pictures.rst:40 f3ae849d494b48b3baadedd068660a19
 msgid "Bitmap Image Import Dialog"
-msgstr "Dialog för import av bitmapbilder"
+msgstr "Dialog för import av rasterbilder"
 
 #: ../../source/import-pictures.rst:42 1b5795821a4c4d45b22888b5fa95c4d7
 msgid "White cross on a red background icon and text \"Linked image not found\""
