--- a/Inkscape/Inkscapes nybörjarguide/shape-tools.po
+++ b/Inkscape/Inkscapes nybörjarguide/shape-tools.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:23+0200\n"
+"PO-Revision-Date: 2025-07-29 13:15+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -30,13 +30,13 @@ msgid ""
 "Geometric shapes, despite their simple look, are useful for many drawing "
 "techniques (and not only vector drawing). With path operations (Union, "
 "Difference, etc…), you can quickly get awesome results from some elementary "
-"shapes. You can even further improve that with path tools. Both path "
-"operations and path tools are detailed in later sections."
+"shapes. You can even further improve that with path tools. Both path operations "
+"and path tools are detailed in later sections."
 msgstr ""
 "Geometriska former, trots sitt enkla utseende, är användbara för många "
-"ritningstekniker (och inte bara vektorritning). Med slingoperationer (Union, "
-"Difference, etc...) kan du snabbt få fantastiska resultat från några "
-"elementära former. Du kan till och med förbättra det ytterligare med "
+"ritningstekniker (och inte bara vektorritning). Med slingoperationer "
+"(sammanfoga, differans, etc...) kan du snabbt få fantastiska resultat från "
+"några elementära former. Du kan till och med förbättra det ytterligare med "
 "slingverktyg. Både slingoperationer och slingverktyg beskrivs i detalj i senare "
 "avsnitt."
 
@@ -51,9 +51,9 @@ msgid ""
 "example, a circle can become a pie wedge, or a rectangle can have its corners "
 "rounded."
 msgstr ""
-"Låt oss rita några geometriska former. Alla formverktyg följer liknande "
-"regler för att du ska kunna skapa och redigera dina former. Men varje verktyg "
-"har specifika alternativ: en cirkel kan till exempel bli en pajkil eller en "
+"Låt oss rita några geometriska former. Alla formverktyg följer liknande regler "
+"för att du ska kunna skapa och redigera dina former. Men varje verktyg har "
+"specifika alternativ: en cirkel kan till exempel bli en pajkil eller en "
 "rektangel kan få sina hörn rundade."
 
 #: ../../source/shape-tools.rst:20 b47168afbbba47b497e8573b0626d9b5
@@ -67,8 +67,7 @@ msgstr ""
 
 #: ../../source/shape-tools.rst:23 4fd6c864691c4486b24b5d5aa30fe053
 msgid "on the canvas, press the mouse button and hold while you drag the mouse;"
-msgstr ""
-"på målarduken, tryck på musknappen och håll den intryckt medan du drar musen;"
+msgstr "på duken, tryck på musknappen och håll den intryckt medan du drar musen;"
 
 #: ../../source/shape-tools.rst:24 bf27fa25451a4adc91d423a8b7aa9a48
 msgid "release the mouse button to display the shape."
@@ -94,8 +93,8 @@ msgid ""
 msgstr ""
 "När musen släpps och formen visas kommer olika handtag att bli synliga. Många "
 "av Inkscapes verktyg använder handtag för ett eller annat ändamål. Men det är "
-"handtagen på de geometriska formerna som används för att skapa många snygga "
-"och spännande effekter. Handtagen kan vara små cirklar, kvadrater och/eller "
+"handtagen på de geometriska formerna som används för att skapa många snygga och "
+"spännande effekter. Handtagen kan vara små cirklar, kvadrater och/eller "
 "diamanter. Ibland kan samma handtag finnas till olika verktyg. Vi kommer att "
 "lära oss mer om varje handtags funktion i de följande kapitlen."
 
@@ -113,29 +112,28 @@ msgid ""
 "sometimes even *only* through key shortcuts. While drawing your shape:"
 msgstr ""
 "Många funktioner i Inkscape är tillgängliga via tangentbordsgenvägar, och "
-"ibland till och med *endast* via tangentbordsgenvägar. Medan du ritar din "
-"form:"
+"ibland till och med *endast* via tangentbordsgenvägar. Medan du ritar din form:"
 
 #: ../../source/shape-tools.rst:49 1c0ab89113cb436ea403db9380c66cef
 msgid ""
 "press :kbd:`Ctrl` while you drag the mouse, with the Rectangle and Ellipse "
 "tools, to create **squares** and **circles**;"
 msgstr ""
-"tryck på :kbd:`Ctrl` medan du drar musen, med verktygen Rectangle och "
-"Ellipse, för att skapa **kvadrater** och **cirklar**;"
+"tryck på :kbd:`Ctrl` medan du drar musen, med verktygen Rektangel och Ellips, "
+"för att skapa **kvadrater** och **cirklar**;"
 
 #: ../../source/shape-tools.rst:51 7bb885e293c04df69d9b3c234d24f2e0
 msgid ""
-"press :kbd:`Shift` while you drag to draw from the center, rather than from "
-"one corner."
+"press :kbd:`Shift` while you drag to draw from the center, rather than from one "
+"corner."
 msgstr ""
-"tryck på :kbd:`Shift` medan du drar för att rita från mitten i stället för "
-"från ett hörn."
+"tryck på :kbd:`Skift` medan du drar för att rita från mitten i stället för från "
+"ett hörn."
 
 #: ../../source/shape-tools.rst:54 e655cfa39daf4dd081191727388a2a95
 msgid ""
-"Try drawing some shapes, with and without those keys to get an idea of how "
-"they can be used."
+"Try drawing some shapes, with and without those keys to get an idea of how they "
+"can be used."
 msgstr ""
 "Försök att rita några former med och utan dessa nycklar för att få en "
 "uppfattning om hur de kan användas."
@@ -146,4 +144,4 @@ msgstr "Flera ellipser kombineras till ett moln"
 
 #: ../../source/shape-tools.rst:61 8f27edbf737d4ec1a361fde5cd47258a
 msgid "Sketching a cloud from ellipses."
-msgstr "Skissera ett moln från ellipser."
+msgstr "Skissa ett moln från ellipser."
