--- a/Inkscape/Inkscapes nybörjarguide/spirals.po
+++ b/Inkscape/Inkscapes nybörjarguide/spirals.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 18:42+0200\n"
+"PO-Revision-Date: 2025-07-29 13:18+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -93,7 +93,7 @@ msgid ""
 "change the spiral's diameter."
 msgstr ""
 "Det enklaste sättet att snabbt ändra antalet varv på en spiral med en "
-"stor mängd är att ange önskat antal i fältet :guilabel:`Turns` i "
+"stor mängd är att ange önskat antal i fältet :guilabel:`Varv` i "
 "verktygets kontrollfält. Detta ändrar inte spiralens diameter."
 
 #: ../../source/spirals.rst:32 d3395334f5754c72b949a1ea096db76f
@@ -117,11 +117,11 @@ msgstr "Spiralverktyg"
 
 #: ../../source/spirals.rst:42 e315e49e0830429ba1c5f357b97d8a7b
 msgid "A basic spiral"
-msgstr "En grundläggande spiral"
+msgstr "En enkel spiral"
 
 #: ../../source/spirals.rst:44 2384e58ec9734517ab8af8d98cc62595
 msgid "Spiral tool: changing with the handles"
-msgstr "Spiralverktyg: byte med handtagen"
+msgstr "Spiralverktyg: ändring med handtagen"
 
 #: ../../source/spirals.rst:48 692d0a9053ca4ebe91cf802d3084ee86
 msgid "Changing a spiral using its handles."
