--- a/Inkscape/Inkscapes nybörjarguide/writing-text.po
+++ b/Inkscape/Inkscapes nybörjarguide/writing-text.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 18:16+0200\n"
+"PO-Revision-Date: 2025-07-29 13:10+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -31,7 +31,7 @@ msgstr "|Icon for Text| :kbd:`F8` eller :kbd:`T`"
 
 #: ../../source/writing-text.rst:56 96d19e4052fb436693d66eb7fc422244
 msgid "Icon for Text"
-msgstr "IKON OCH TEXT"
+msgstr "Ikon för text"
 
 #: ../../source/writing-text.rst:7 4735764da0814cba8c788986521739c5
 msgid ""
@@ -74,8 +74,8 @@ msgid ""
 "Click-and-drag on the canvas. This will create a frame for a flowed text "
 "with a blue border, in which the text can be inserted."
 msgstr ""
-"Klicka och dra på målarduken. Detta skapar en ram för en flödande text med "
-"en blå kant, där texten kan infogas."
+"Klicka och dra på duken. Detta skapar en ram för en flödande text med en "
+"blå kant, där texten kan infogas."
 
 #: ../../source/writing-text.rst:21 a3928f08dbf747a88b442db1bde874c9
 msgid ""
@@ -107,7 +107,7 @@ msgstr ""
 
 #: ../../source/writing-text.rst:32 04436ccb4b414e17bedf01353d231539
 msgid "Writing text directly to the canvas"
-msgstr "Skriva text direkt på målarduken"
+msgstr "Skriva text direkt på duken"
 
 #: ../../source/writing-text.rst:36 7be21780bd624c4d947e301054f55e57
 msgid "A left-click on the canvas with the text tool positions the cursor."
@@ -117,7 +117,7 @@ msgstr ""
 
 #: ../../source/writing-text.rst:38 e21652a328ca45d0b4eae1b584e59fb9
 msgid "Using return to create a newline"
-msgstr "Använda return för att skapa ett nytt streck"
+msgstr "Använda Return för att skapa en ny rad"
 
 #: ../../source/writing-text.rst:42 fb72391469f940438a954880dc94faec
 msgid "This mode does not automatically break lines in the text."
@@ -133,7 +133,7 @@ msgid ""
 "use a flowed text with automatic line breaks."
 msgstr ""
 "Du måste först skapa en textram med textverktyget om du vill använda en "
-"flytande text med automatiska radbrytningar."
+"flödande text med automatiska radbrytningar."
 
 #: ../../source/writing-text.rst:50 2390aa825b6345108aa49fa3e673a85d
 msgid "Modifying the frame so the text fits"
